# HPM6284Foc

./: .gitattributes  LICENSE  README.md
Hardware/: .gitignore  Driver.kicad_sch  HPM6280Foc.kicad_pcb  HPM6280Foc.kicad_pro  HPM6280Foc.kicad_sch  HPMCore.kicad_sch  HPMCore_Debug.kicad_sch  HPMCore_Flash.kicad_sch  HPMCore_Power.kicad_sch  Peripherals.kicad_sch  fp-lib-table  sym-lib-table
Hardware/doc/: ntc温度曲线.xlsx
Hardware/lib/: HPM6280Foc.kicad_sym
Hardware/lib/3D/: WAFER-GH1.25-2PWB.STEP  WAFER-GH1.25-4PLB.STEP  WAFER-GH1.25-4PWB.STEP  WAFER-GH1.25-6PWB.STEP  WAFER-GH1.25-7PWB.STEP  WAFER-ZH1.5-4PWB.STEP
Hardware/lib/HPM_LIB_20231231/HPM_footprints.pretty/: BGA-196_14x14_10.0x10.0mm.kicad_mod  BGA-289_17x17_14.0x14.0mm.kicad_mod  BGA116 _13x13_7.0x7.0mm.kicad_mod  BGA_417.kicad_mod  LQFP-100_14x14mm_P0.5mm.kicad_mod  LQFP-64_10x10mm_P0.5mm.kicad_mod  LQFP-80_14x14mm_P0.5mm.kicad_mod  QFN-48_6x6mm_P0.4mm_EP4.2x4.2mm.kicad_mod  eLQFP144L_22x22_P0.5mm_EP5x5mm.kicad_mod
Hardware/lib/HPM_LIB_20231231/HPM_symbols/: HPM5300_Library.kicad_sym  HPM6200_Library.kicad_sym  HPM6300_Library.kicad_sym  HPM64-6700_Library.kicad_sym  HPM6800_Library.kicad_sym
Hardware/lib/Library.pretty/: CAP_W_D10xL16.kicad_mod  CAP_W_D5xL11.kicad_mod  IDC_SMD_P1.27mm_02x05.kicad_mod  JST_GH_BM02B-GHS-TBT_1x02-1MP_P1.25mm_Vertical.kicad_mod  JST_GH_BM04B-GHS-TBT_1x04-1MP_P1.25mm_Vertical.kicad_mod  JST_GH_BM06B-GHS-TBT_1x06-1MP_P1.25mm_Vertical.kicad_mod  JST_GH_BM07B-GHS-TBT_1x07-1MP_P1.25mm_Vertical.kicad_mod  JST_GH_SM02B-GHS-TB_1x02-1MP_P1.25mm_Horizontal.kicad_mod  JST_GH_SM04B-GHS-TB_1x04-1MP_P1.25mm_Horizontal.kicad_mod  JST_GH_SM06B-GHS-TB_1x06-1MP_P1.25mm_Horizontal.kicad_mod  JST_GH_SM07B-GHS-TB_1x07-1MP_P1.25mm_Horizontal.kicad_mod  NTC.kicad_mod  PQFN-8-EP_6x5mm_P1.27mm_Generic.kicad_mod  SMD3215-2P.kicad_mod  YZ-155.kicad_mod  ZH_SM04_1.50mm_Horizontal.kicad_mod
Software/: .gitignore  pinmap.hpmpc  usb_vcp_test.py
Software/DRV8323_SPI/core0/: CMakeLists.txt
Software/DRV8323_SPI/core0/src/: drv832x.c  drv832x.h  main.c
Software/DRV8323_SPI/core1/: CMakeLists.txt  app.yaml
Software/boards/HPM6284Foc/: HPM6284Foc.yaml  README.md  board.c  board.h  pinmux.c
Software/foc_demo/core0/: .clang-format  CMakeLists.txt  CMakePresets.json  app.yaml  core0.code-workspace
Software/foc_demo/core0/src/: project_config.h  user_config.h
Software/foc_demo/core0/src/app/: MotorClass.c  MotorClass.h  main.c
Software/foc_demo/core0/src/app/current_calibration/: current_calibration.c
Software/foc_demo/core0/src/app/electrical_angle_calibration/: electrical_angle_calibration.c  electrical_angle_calibration.h
Software/foc_demo/core0/src/foc/: fast_sin.h  foc_core.c  foc_core.h  foc_pid.c  foc_pid.h  foc_pll.c  iir_filter.c  iir_filter.h
Software/foc_demo/core0/src/hardware/: adc_init.c  adc_init.h  drv832x.c  drv832x.h  hrpwm.c  hrpwm.h  trgm.h
Software/foc_demo/core0/src/hardware/current/: current.h
Software/foc_demo/core0/src/hardware/encoder/: encoder.h  mt6701_spi.c  mt6701_spi.h
Software/foc_demo/core1/: CMakeLists.txt  CMakePresets.json
Software/foc_demo/core1/src/: main.c
Software/foc_demo/core1/src/usb/: cdc_acm.c
Software/foc_demo/public/: core_comm.h
Software/hello_led/core0/: CMakeLists.txt  app.yaml  core0.code-workspace
Software/hello_led/core0/src/: demo.c
Software/hello_led/core1/: CMakeLists.txt
Software/hello_led/core1/src/: main.c
